## Copyright (C) 2006 Free Software Foundation, Inc.
## This Makefile.am is free software; the Free Software Foundation
## gives unlimited permission to copy, distribute and modify it.
ACLOCAL_AMFLAGS=-I m4
#if COND_OPT
#   MAYBE_OPT = examples
#else
#   MAYBE_OPT = 
#endif
  MAYBE_OPT = 
#SUBDIRS = include bases51 misc src $(MAYBE_OPT) data manual
SUBDIRS = include misc bases51 pythia6428 src $(MAYBE_OPT) data manual

#dist_doc_DATA = README
EXTRA_DIST = README README-lhefile ChangeLog CMakeLists.txt \
  cmake/Modules/FindLHAPDF.cmake cmake/Modules/FindPythia8.cmake cmake/Modules/FindHepMC2.cmake cmake/Modules/FindTMDLIB.cmake


